fixed header overflow

--- a/SCSS/_mobile.scss
+++ b/SCSS/_mobile.scss
@@ -1,13 +1,13 @@
 @mixin dir($dir) {
     flex-direction: $dir;
-    width: 100vw
+    width: 100dvw
 }
 
 @media only screen and (orientation: portrait) {
 
     .content-container {
         @include dir(column-reverse);
-        min-width: 100vw;
+        min-width: 100dvw;
         
     }
 
@@ -42,9 +42,9 @@
 
     .about-text {
         font-size: 4vmin;
-        width: 85vw;
+        width: 85dvw;
         text-align: justify;
-        margin-top: -13vh
+        margin-top: -13dvh
     }
     .open{
         font-size: 4vmin;
@@ -54,9 +54,9 @@
         top: 45%;
         left: 50%;
         transform: translate(-50%, -50%);
-        max-height: 80vh;
-        height: 80vh;
-        width: 90vw;
+        max-height: 80dvh;
+        height: 80dvh;
+        width: 90dvw;
         padding-top: 1px;
     }
 
@@ -70,10 +70,10 @@
     }
 
    .slider-container {
-        width:90vw;
-        margin-top: -10vh;
+        width:90dvw;
+        margin-top: -10dvh;
         // max-height: 30vh;
-        height: calc(90vw/1.94); //aspect ratio ~ 4:2
+        height: calc(90dvw/1.94); //aspect ratio ~ 4:2
     }
     .project-modal-header{
         flex-direction: column;
@@ -125,7 +125,7 @@
 @media only screen and (orientation:landscape) {
     .content-container {
         flex-direction: row;
-        width: 98vw;
+        width: 98dvw;
     }
 
     .slider-container {
@@ -133,9 +133,9 @@
         // height: 50vmin;
         // max-width: 53vw;
         // min-width: 53vw;
-        width:45vw;
+        width:45dvw;
         // height:35vh;
-        height: calc(45vw/1.94);//aspect ratio ~ 4:2
+        height: calc(45dvw/1.94);//aspect ratio ~ 4:2
     }
 
     .welcome-wrapper {
@@ -145,11 +145,11 @@
   
 
     .info{
-        max-width: 50vw;
+        max-width: 50dvw;
     }
 
     .about-text {
-        width: 50vw;
+        width: 50dvw;
         text-align: center;
         font-size: 3vmin;
         text-align: justify;
@@ -162,13 +162,13 @@
         top: 50%;
         left: 50%;
         // height: fit-content;
-        width: 80vw;
+        width: 80dvw;
         min-width: fit-content;
-        max-height: 98vh;
+        max-height: 98dvh;
     }
 
     .contact-title{
-        min-width: 45vw;
+        min-width: 45dvw;
     }
 
     // .timeline-container{
@@ -177,7 +177,7 @@
     //     align-items: center;
     // }
          .works-description {
-             max-width: 40vw;
+             max-width: 40dvw;
          }
     .links-portrait{
         display: none;
@@ -193,12 +193,12 @@
         margin-top: 20px;
         position: relative;
         z-index: 1;
-        height: 60vh;
+        height: 60dvh;
     }
 
     .welcome-wrapper>.main-title {
-        min-width: 100vw;
-        max-width: 100vw;
+        min-width: 100dvw;
+        max-width: 100dvw;
     }
 
     .welcome-wrapper>.main-title>h1 {
@@ -220,13 +220,13 @@
     }
 
     .wrapper {
-        padding-left: 5vw;
+        padding-left: 5dvw;
         text-align: start;
         position: absolute;
         bottom: 50px;
 
-        min-width: 90vw;
-        max-width: 100vw;
+        min-width: 90dvw;
+        max-width: 100dvw;
 
         flex-direction: column;
     }
@@ -238,8 +238,8 @@
         position: absolute;
         bottom: 0;
 
-        min-width: 90vw;
-        max-width: 100vw;
+        min-width: 90dvw;
+        max-width: 100dvw;
     }
 
     .wrapper>p {
@@ -330,7 +330,7 @@
     }
 
     .content-container {
-        width: 100vw;
+        width: 100dvw;
     }
 
     .about-modal {
@@ -463,7 +463,7 @@
     }
 
     .wrapper {
-        margin-right: 15vw;
+        margin-right: 15dvw;
         display: flex;
         flex-direction: column;
 
@@ -473,7 +473,7 @@
     }
 
     .works-description{
-        max-width: 100vw;
+        max-width: 100dvw;
     }
     .slider-container{
         margin-right: 45px;
@@ -518,8 +518,8 @@
 @media only screen and (min-width: 730px) {
     .content-container {
         flex-direction: row;
-        padding-right: 2vw;
-        width: 98vw;
+        padding-right: 2dvw;
+        width: 98dvw;
     }
 
     .home>.content-container {
@@ -534,7 +534,7 @@
     }
 
     .welcome-wrapper {
-        width: 50vw;
+        width: 50dvw;
         padding-left: 30px;
     }
 
@@ -595,7 +595,7 @@
 
     .about-modal {
         height: fit-content;
-        width: 70vw;
+        width: 70dvw;
         // font-size: 18px;
         font-size: 1.5rem;
         // line-height: 30px;
