--- a/SCSS/main.css
+++ b/SCSS/main.css
@@ -514,8 +514,8 @@ h3 {
 }
 
 .projects-modal {
-  width: 50vw;
-  height: 99vh;
+  width: 50dvw;
+  height: 99dvh;
   overflow-y: hidden;
   padding: 0px;
 }
@@ -531,7 +531,7 @@ h3 {
 
 .project-modal-header-wrapper {
   max-width: 100%;
-  min-width: 100%;
+  min-width: 95%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -567,6 +567,7 @@ h3 {
 .toggle-button {
   position: absolute;
   right: 1rem;
+  top: 1rem;
   display: none;
   flex-direction: column;
   justify-content: space-between;
@@ -609,8 +610,8 @@ h3 {
 
 .tiles-wrapper {
   width: 90%;
-  height: 150vh;
-  max-height: 150vh;
+  height: 150dvh;
+  max-height: 150dvh;
   overflow-y: auto;
   overflow-x: hidden;
   display: grid;
@@ -695,7 +696,7 @@ h3 {
 
 .screenshot {
   grid-area: 3/1/4/4;
-  height: 75vh;
+  height: 75dvh;
 }
 
 .contact {
@@ -1057,22 +1058,22 @@ body {
 @media only screen and (orientation: portrait) {
   .content-container {
     flex-direction: column-reverse;
-    width: 100vw;
-    min-width: 100vw;
+    width: 100dvw;
+    min-width: 100dvw;
   }
   .about > .content-container,
   .projects > .content-container {
     flex-direction: column-reverse;
-    width: 100vw;
+    width: 100dvw;
   }
   .contact .content-container {
     flex-direction: column;
-    width: 100vw;
+    width: 100dvw;
   }
   .home > .content-container,
   .contact > .content-container {
     flex-direction: column;
-    width: 100vw;
+    width: 100dvw;
     padding-right: 0px;
   }
   .home .content-container {
@@ -1080,9 +1081,9 @@ body {
   }
   .about-text {
     font-size: 4vmin;
-    width: 85vw;
+    width: 85dvw;
     text-align: justify;
-    margin-top: -13vh;
+    margin-top: -13dvh;
   }
   .open {
     font-size: 4vmin;
@@ -1091,18 +1092,18 @@ body {
     top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
-    max-height: 80vh;
-    height: 80vh;
-    width: 90vw;
+    max-height: 80dvh;
+    height: 80dvh;
+    width: 90dvw;
     padding-top: 1px;
   }
   .timeline-container {
     display: none;
   }
   .slider-container {
-    width: 90vw;
-    margin-top: -10vh;
-    height: 46.3917525773vw;
+    width: 90dvw;
+    margin-top: -10dvh;
+    height: 46.3917525773dvw;
   }
   .project-modal-header {
     flex-direction: column;
@@ -1139,21 +1140,21 @@ body {
 @media only screen and (orientation: landscape) {
   .content-container {
     flex-direction: row;
-    width: 98vw;
+    width: 98dvw;
   }
   .slider-container {
     /*important! Prevent from jumping while sliding*/
-    width: 45vw;
-    height: 23.1958762887vw;
+    width: 45dvw;
+    height: 23.1958762887dvw;
   }
   .welcome-wrapper {
     max-height: 98vh;
   }
   .info {
-    max-width: 50vw;
+    max-width: 50dvw;
   }
   .about-text {
-    width: 50vw;
+    width: 50dvw;
     text-align: center;
     font-size: 3vmin;
     text-align: justify;
@@ -1164,16 +1165,16 @@ body {
   .about-modal, .projects-modal {
     top: 50%;
     left: 50%;
-    width: 80vw;
+    width: 80dvw;
     min-width: -moz-fit-content;
     min-width: fit-content;
-    max-height: 98vh;
+    max-height: 98dvh;
   }
   .contact-title {
-    min-width: 45vw;
+    min-width: 45dvw;
   }
   .works-description {
-    max-width: 40vw;
+    max-width: 40dvw;
   }
   .links-portrait {
     display: none;
@@ -1185,11 +1186,11 @@ body {
     margin-top: 20px;
     position: relative;
     z-index: 1;
-    height: 60vh;
+    height: 60dvh;
   }
   .welcome-wrapper > .main-title {
-    min-width: 100vw;
-    max-width: 100vw;
+    min-width: 100dvw;
+    max-width: 100dvw;
   }
   .welcome-wrapper > .main-title > h1 {
     font-size: 12vmin;
@@ -1206,12 +1207,12 @@ body {
     min-width: 150%;
   }
   .wrapper {
-    padding-left: 5vw;
+    padding-left: 5dvw;
     text-align: start;
     position: absolute;
     bottom: 50px;
-    min-width: 90vw;
-    max-width: 100vw;
+    min-width: 90dvw;
+    max-width: 100dvw;
     flex-direction: column;
   }
   .wrapper2 {
@@ -1219,8 +1220,8 @@ body {
     text-align: start;
     position: absolute;
     bottom: 0;
-    min-width: 90vw;
-    max-width: 100vw;
+    min-width: 90dvw;
+    max-width: 100dvw;
   }
   .wrapper > p {
     margin-block-start: 0em;
@@ -1234,7 +1235,7 @@ body {
     display: flex;
     justify-content: space-between;
     flex-direction: row;
-    width: 100vw;
+    width: 100dvw;
   }
   .swiper-pagination-vertical.swiper-pagination-bullets,
   .swiper-vertical > .swiper-pagination-bullets {
@@ -1296,7 +1297,7 @@ body {
     }
   }
   .content-container {
-    width: 100vw;
+    width: 100dvw;
   }
   .about-modal, .projects-modal {
     font-size: 16px;
@@ -1315,7 +1316,7 @@ body {
 @media only screen and (min-width: 541px) {
   .home .content-container {
     flex-direction: column;
-    width: 100vw;
+    width: 100dvw;
     padding-right: 0px;
     justify-content: flex-start;
   }
@@ -1375,7 +1376,7 @@ body {
 @media only screen and (min-width: 541px) and (orientation: portrait) {
   .home .content-container {
     flex-direction: column;
-    width: 100vw;
+    width: 100dvw;
     padding-right: 0px;
     justify-content: flex-start;
   }
@@ -1393,7 +1394,7 @@ body {
     min-width: 150%;
   }
   .wrapper {
-    margin-right: 15vw;
+    margin-right: 15dvw;
     display: flex;
     flex-direction: column;
   }
@@ -1401,7 +1402,7 @@ body {
     align-self: flex-start;
   }
   .works-description {
-    max-width: 100vw;
+    max-width: 100dvw;
   }
   .slider-container {
     margin-right: 45px;
@@ -1431,13 +1432,13 @@ body {
 @media only screen and (min-width: 730px) {
   .content-container {
     flex-direction: row;
-    padding-right: 2vw;
-    width: 98vw;
+    padding-right: 2dvw;
+    width: 98dvw;
   }
   .home > .content-container {
     padding-right: 0px;
     flex-direction: row;
-    width: 100vw;
+    width: 100dvw;
   }
   .profile-pic {
     height: 100%;
@@ -1445,7 +1446,7 @@ body {
     top: 55%;
   }
   .welcome-wrapper {
-    width: 50vw;
+    width: 50dvw;
     padding-left: 30px;
   }
   .wrapper {
@@ -1485,7 +1486,7 @@ body {
   .about-modal, .projects-modal {
     height: -moz-fit-content;
     height: fit-content;
-    width: 70vw;
+    width: 70dvw;
     font-size: 1.5rem;
   }
 }/*# sourceMappingURL=main.css.map */
